группировка одинаковых свойств, ссылки в подвале на создателей сайта, удалены комментарии в main

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -21,11 +21,14 @@ html
       #root_footer
     #footer
       #made_by
-        |Программное обеспечение Григорьев О.
+        | Программное обеспечение  
+        a href='https://vk.com/mehanoid' Григорьев О.
         br
-        |Вёрстка Григорьева Ю.
+        | Вёрстка 
+        a href='https://vk.com/serdce_ptici' Григорьева Ю.
         br
-        |Дизайн Фанина А.
+        | Дизайн 
+        a href='https://vk.com/stormypetrel' Фанина А.
       #copyright
         a.vk    href='http://vk.com/club119497'
           =image_tag('curu/vk.png', height: 30)
