--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -19,8 +19,6 @@ body
 
   #main_wrap
     min-height: 350px
-    text-align: center
-
 
   #menu
     list-style-image: none
@@ -66,7 +64,6 @@ body
     font-size: 25px
     line-height: 1.6
     padding: 10px
-    text-align: center
 
 
   #footer
@@ -83,7 +80,6 @@ body
 
   #copyright
     float: right
-    text-align: center
     padding-right: 10px
     padding-top: 5px
     width: 100px
@@ -108,3 +104,6 @@ body
     position: absolute
     top: 5px
     right: 10px
+
+  #main_wrap, #copyright, #content
+    text-align: center
